# japanese_text_analyzer

./: .gitignore  Cargo.toml  README.md  setup.bat  setup.sh
.github/workflows/: build_test.yml  manual_release.yml  release.yml
src/: analyzer.rs  args_parser.rs  dict_handler.rs  file_handler.rs  help_text.txt  json_handler.rs  main.rs  stats_handler.rs  type_extensions.rs  utf8_bufreader.rs
src/tests/: tests.rs
src/tests/data/: minimal_synthetic.json  minimal_synthetic.txt
